# tmenu

./: .gitignore  BUILD.md  LICENSE  README.md  example-config.ini  example-config.toml  flake.nix  package.nix  pyproject.toml  shell.nix  test_mouse.py  treefmt.nix
docs/: CONFIGURATION.md  FIGLET.md  NAVIGATION.md  THEMES.md  USAGE.md  configuration.md
nix/: home-manager-module.nix  nixos-module.nix  overlay.nix  package.nix
src/: config.default.ini  test_tmenu.py  tmenu.py
src/tmenu/: __init__.py  __main__.py  config.default.toml
src/tmenu/themes/: onedark.toml  solarized-dark.toml
tests/: test_tmenu.py
themes/: catppuccin-mocha.ini  catppuccin-mocha.toml  dracula.ini  gruvbox-dark.ini  gruvbox-dark.toml  monokai.ini  nord.ini  nord.toml  onedark.ini  rose-pine.ini  solarized-dark.ini  solarized-light.ini  solarized-light.toml  tokyo-night.ini
tmenu/: __init__.py  __main__.py  cli.py  colors.py  config.default.toml  config.py  menu.py  types.py
tmenu/themes/: dracula.toml  monokai.toml  rose-pine.toml  tokyo-night.toml
